# unisync

./: README.md  pyproject.toml
src/unisync/: argparser.py  config.py  main.py  paths.py  synchroniser.py
