[project]
name = "unisync"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Retourné",email = "paul.retourne@orange.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyaml (>=25.5.0,<26.0.0)",
    "pyrallis (>=0.3.1,<0.4.0)"
]

[tool.poetry]
packages = [{include = "unisync", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
